--- a/src/app/login/login.tpl.html
+++ b/src/app/login/login.tpl.html
@@ -4,7 +4,7 @@
 </div>
  -->
 
-<font-color-component font-color="{{ctrl.fontColor}}"></font-color-component>
-<div>
+<!-- <font-color-component font-color="{{ctrl.fontColor}}"></font-color-component>
+<div> -->
   <theme-creator-component font-size="{{ctrl.fontSize}}" font-color="{{ctrl.fontColor}}" font-family="{{ctrl.fontFamily}}"></theme-creator-component>
 </div>
