--- a/src/app/components/font-color-component/font-color-component.tpl.html
+++ b/src/app/components/font-color-component/font-color-component.tpl.html
@@ -1,1 +1,1 @@
-<input id="fontColor" class="form-control" name="fontColor" ng-model="ctrl.fontColor" ng-change="ctrl.fontColorChangedEvent()"/>
+<input id="fontColor" class="form-control" name="fontColor" ng-model="ctrl.fontColor" ng-change="ctrl.modelChanged()"/>
