--- a/src/app/components/font-family-component/font-family-component.tpl.html
+++ b/src/app/components/font-family-component/font-family-component.tpl.html
@@ -1,1 +1,1 @@
-<select class="form-control" ng-model="ctrl.fontFamily" ng-change="ctrl.fontFamilyChangedEvent()" ng-options="font for font in ctrl.fonts">
+<select class="form-control" ng-model="ctrl.fontFamily" ng-change="ctrl.modelChanged()" ng-options="font for font in ctrl.fonts">
